--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,38 @@ body {
   margin: 0;
   color: #636363;
 }
+
+
+.loader {
+  width: 80%;
+  margin-top: 40px;
+}
+
+.card-container {
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.card {
+  height: 300px;
+  margin: 30px 10px;
+  position: relative;
+  transition: all .3s ease-in-out;
+}
+
+.card img {
+  height: 100%;
+  transition: .5s all ease-out
+}
+
+.card h2 {
+  position: relative;
+  bottom: 120px;
+  transform: rotate(-25deg);
+  color: green;
+  background: white;
+  border-radius: 12px;
+}
