--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,13 @@ body {
   font-size: 18px;
   padding: 15px 15px;
   outline: none;
+  transition: .3s ease-in-out;
+}
+
+#search:focus {
+  background: red;
+  color:white;
+  transition: .3s ease-in-out;
 }
 
 form {
